--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,3 +27,57 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header {
+  font-size: 32px;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main-container {
+  display: flex;
+  flex-grow: 1
+}
+
+a, li {
+  text-decoration: none;
+  list-style: none;
+  color: white;
+  margin-bottom: 10px;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+  gap: 20px;
+}
+
+.card {
+  padding: 48px;
+  width: 200px;
+}
